hphp/test/zend/good/ext-standard-serialize/bug46882.php
<?php
var_dump(unserialize('i:5000000000;') == 5000000000);
?>