hphp/test/zend/bad/ext/phar/tests/phpinfo_003.php
<?php
phpinfo(INFO_MODULES);
?>
===DONE===